dataset1235/2025-2/610742602/users/4180041627/executions/677928262_2132966528.log
== SUBMISSION (2025-08-26 20:14:33)
-- CODE: 
print(hOmem_dE_feRRo.upper())

# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(hOmem_dE_feRRo.upper())
          ^^^^^^^^^^^^^^
NameError: name 'hOmem_dE_feRRo' is not defined
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(hOmem_dE_feRRo.upper())
          ^^^^^^^^^^^^^^
NameError: name 'hOmem_dE_feRRo' is not defined
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(hOmem_dE_feRRo.upper())
          ^^^^^^^^^^^^^^
NameError: name 'hOmem_dE_feRRo' is not defined
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(hOmem_dE_feRRo.upper())
          ^^^^^^^^^^^^^^
NameError: name 'hOmem_dE_feRRo' is not defined
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(hOmem_dE_feRRo.upper())
          ^^^^^^^^^^^^^^
NameError: name 'hOmem_dE_feRRo' is not defined
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(hOmem_dE_feRRo.upper())
          ^^^^^^^^^^^^^^
NameError: name 'hOmem_dE_feRRo' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 20:21:25)
-- CODE: 
texto=input("insira o nome")





print(texto.upper())

# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
insira o nomeDEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
insira o nomeMARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
insira o nomeSELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
insira o nomeBILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
insira o nomeHOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
insira o nomePRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:13:52)
-- CODE: 
print(hOmem_dE_feRRo.upper())

# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(hOmem_dE_feRRo.upper())
          ^^^^^^^^^^^^^^
NameError: name 'hOmem_dE_feRRo' is not defined
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(hOmem_dE_feRRo.upper())
          ^^^^^^^^^^^^^^
NameError: name 'hOmem_dE_feRRo' is not defined
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(hOmem_dE_feRRo.upper())
          ^^^^^^^^^^^^^^
NameError: name 'hOmem_dE_feRRo' is not defined
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(hOmem_dE_feRRo.upper())
          ^^^^^^^^^^^^^^
NameError: name 'hOmem_dE_feRRo' is not defined
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(hOmem_dE_feRRo.upper())
          ^^^^^^^^^^^^^^
NameError: name 'hOmem_dE_feRRo' is not defined
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(hOmem_dE_feRRo.upper())
          ^^^^^^^^^^^^^^
NameError: name 'hOmem_dE_feRRo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:21:09)
-- CODE: 
texto=input("insira o nome")





print(texto.upper())

# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
insira o nomeDEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
insira o nomeMARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
insira o nomeSELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
insira o nomeBILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
insira o nomeHOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
insira o nomePRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:21:32)
-- CODE: 
texto=input("insira o nome")





print(texto.upper())

# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
insira o nomeDEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
insira o nomeMARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
insira o nomeSELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
insira o nomeBILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
insira o nomeHOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
insira o nomePRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:15:36)
-- CODE: 
print("hOmem_dE_feRRo.upper()")

# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
hOmem_dE_feRRo.upper()
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
hOmem_dE_feRRo.upper()
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
hOmem_dE_feRRo.upper()
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
hOmem_dE_feRRo.upper()
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
hOmem_dE_feRRo.upper()
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
hOmem_dE_feRRo.upper()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:18:56)
-- CODE: 
print(texto.upper())
texto= "HOmem_De_FeRrO"
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 20:15:38)
-- CODE: 
print("hOmem_dE_feRRo.upper()")

# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
hOmem_dE_feRRo.upper()
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
hOmem_dE_feRRo.upper()
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
hOmem_dE_feRRo.upper()
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
hOmem_dE_feRRo.upper()
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
hOmem_dE_feRRo.upper()
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
hOmem_dE_feRRo.upper()
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:17:41)
-- CODE: 
print(texto.upper())

# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:18:38)
-- CODE: 
print(texto.upper())
texto= HOmem_De_FeRrO
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(texto.upper())
          ^^^^^
NameError: name 'texto' is not defined. Did you mean: 'next'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:17:02)
-- CODE: 
print("texto.upper()")

# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
texto.upper()
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
texto.upper()
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
texto.upper()
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
texto.upper()
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
texto.upper()
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
texto.upper()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 20:17:04)
-- CODE: 
print("texto.upper()")

# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
texto.upper()
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
texto.upper()
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
texto.upper()
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
texto.upper()
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
texto.upper()
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
texto.upper()
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 20:15:17)
-- CODE: 
print("hOmem_dE_feRRo".upper())

# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
HOMEM_DE_FERRO
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
HOMEM_DE_FERRO
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
HOMEM_DE_FERRO
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
HOMEM_DE_FERRO
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
HOMEM_DE_FERRO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:15:14)
-- CODE: 
print("hOmem_dE_feRRo".upper())

# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
HOMEM_DE_FERRO
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
HOMEM_DE_FERRO
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
HOMEM_DE_FERRO
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
HOMEM_DE_FERRO
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
HOMEM_DE_FERRO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:16:42)
-- CODE: 
print("texto.upper()")

# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
texto.upper()
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
texto.upper()
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
texto.upper()
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
texto.upper()
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
texto.upper()
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
texto.upper()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
